# 2024_GROUP_20

./: .gitignore  Doxyfile  ModelPartList_8h.html  ModelPartList_8h_source.html  ModelPart_8cpp.html  ModelPart_8h.html  ModelPart_8h_source.html  README.md  VRRenderThread_8cpp.html  VRRenderThread_8h.html  VRRenderThread_8h_source.html  annotated.html  annotated_dup.js  classMainWindow-members.html  classMainWindow.html  classMainWindow.js  classModelPart-members.html  classModelPart.html  classModelPart.js  classModelPartList-members.html  classModelPartList.html  classOptionDialog-members.html  classOptionDialog.html  classOptionDialog.js  classVRRenderThread-members.html  classVRRenderThread.html  classes.html  dir_7611d76fca231c2d42a3c323feca94f4.html  dir_7611d76fca231c2d42a3c323feca94f4.js  files.html  files_dup.js  functions.html  functions_func.html  hierarchy.html  index.html  main_8cpp.html  mainwindow_8cpp.html  mainwindow_8h.html  mainwindow_8h_source.html  md_README.html  (+5 more)
.github/workflows/: doxygen-deploy.yml
CAD_VIEWER/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  ModelPartList.cpp  VRRenderThread.cpp  VRRenderThread.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  optiondialog.cpp  optiondialog.h  optiondialog.ui
search/: all_4.js  all_8.js  all_9.js  all_c.js  all_d.js  files_0.js  files_1.js  functions_4.js  functions_5.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  searchdata.js
